<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"/>
    </group>

    <item android:title="@string/nav_order">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_order_purches"
                    android:icon="@drawable/ic_shopping_cart_black_24dp"
                    android:title="@string/nav_order_purches" />

                <item
                    android:id="@+id/seller_order_list"
                    android:title="@string/nav_order_list"
                    android:icon="@drawable/ic_shopping_basket_black_24dp"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_rewards">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_point"
                    android:icon="@drawable/ic_shopping_cart_black_24dp"
                    android:title="@string/nav_point" />

            </group>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:title="About" />

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>


</menu>